fix: fix pop-up z-index

--- a/frontend/src/app/shared/ui/pop-up/pop-up.component.scss
+++ b/frontend/src/app/shared/ui/pop-up/pop-up.component.scss
@@ -5,7 +5,7 @@
   position: fixed;
   right: 20px;
   top: 40px;
-  z-index: 999;
+  z-index: 99999;
 
   .popUp {
     width: 100%;
